Set HTML overflow-y to scroll to prevent content snapping.

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+html {
+    overflow-y: scroll;
+}
 
 /* Sticky Footer Styles */
 * {
